# sntry

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: main.rs
src/api/: client.rs
src/api/models/: common.rs  event.rs  issue.rs  mod.rs  release.rs
src/cli/: args.rs
src/cli/commands/: mod.rs
src/cli/commands/events/: attachments.rs  list.rs  mod.rs  view.rs
src/cli/commands/issues/: comment.rs  link.rs  links.rs  list.rs  mod.rs  tags.rs  view.rs
src/cli/commands/releases/: list.rs  mod.rs  view.rs
src/config/: loader.rs
src/output/: json.rs  mod.rs  table.rs
tests/: cli_tests.rs
