[package]
name = "sentry-cli"
version = "0.2.0"
edition = "2021"
description = "CLI tool for managing Sentry issues"
license = "MIT"
repository = "https://github.com/d6e/sentry-cli"
readme = "README.md"
keywords = ["sentry", "cli", "issues", "error-tracking"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "sentry"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
directories = "6"
tabled = { version = "0.20", features = ["ansi"] }
colored = "3"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
url = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
